<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#f994e5"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView10"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="100dp"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AnA"
        android:textColor="#d80b96"/>

    <TextView
        android:text="@string/registrasi"
        android:textSize="25dp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_width="300dp"
            android:background="@color/tr_grey"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_width="300dp"
            android:background="@color/tr_grey"
            android:layout_marginTop="10dp"
            android:backgroundTint="#bac6c3"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_registerr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/tr_black"
        android:layout_marginTop="30dp"
        android:backgroundTint="#c50ba0"/>

    <TextView
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:id="@+id/loginNow"
        android:text="@string/click_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>